samples/_failures_safe/1761308989_243362_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bcb7fa97.c: In function ‘main’:
./samples/SAFE/__tmp_bcb7fa97.c:174:25: error: expected ‘)’ at end of input
  174 |     if (len > 0 && input
      |        ~                ^
      |                         )
./samples/SAFE/__tmp_bcb7fa97.c:174:5: error: expected declaration or statement at end of input
  174 |     if (len > 0 && input
      |     ^~
